--- a/Olive/DataAccess.Tests/DataAccess.Tests.csproj
+++ b/Olive/DataAccess.Tests/DataAccess.Tests.csproj
@@ -40,10 +40,12 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="xunit">
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\xUnit.NET\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
