--- a/Olive/DataAccess.Tests/DataAccess.Tests.csproj
+++ b/Olive/DataAccess.Tests/DataAccess.Tests.csproj
@@ -40,9 +40,6 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="NMock2">
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\NMock2\NMock2.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -56,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountUserTests.cs" />
-    <Compile Include="OliveContextFactory.cs" />
+    <Compile Include="TestBase.cs" />
     <Compile Include="OliveContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccountTests.cs" />
