--- a/Olive/DataAccess/DataAccess.csproj
+++ b/Olive/DataAccess/DataAccess.csproj
@@ -117,6 +117,7 @@
     <Compile Include="DbConnectionExtensions.cs" />
     <Compile Include="Currency.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IOliveContext.cs" />
     <Compile Include="OliveContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
