--- a/Olive/Website.Tests/Website.Tests.csproj
+++ b/Olive/Website.Tests/Website.Tests.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountControllerTests.cs" />
+    <Compile Include="Controllers\ControllerTestBase.cs" />
+    <Compile Include="Controllers\MvcMockHelpers.cs" />
+    <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
