--- a/Olive/DataAccess/DataAccess.csproj
+++ b/Olive/DataAccess/DataAccess.csproj
@@ -97,6 +97,7 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
@@ -114,6 +115,7 @@
     <Compile Include="AccountType.cs" />
     <Compile Include="AccountUser.cs" />
     <Compile Include="AccountWithBalance.cs" />
+    <Compile Include="AuthenticationException.cs" />
     <Compile Include="DbConnectionExtensions.cs" />
     <Compile Include="Currency.cs" />
     <Compile Include="GlobalSuppressions.cs" />
