--- a/Olive/Services/Web.config
+++ b/Olive/Services/Web.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
+  <connectionStrings>
+    <add name="OliveConnectionString" connectionString="server=.\SQLEXPRESS;database=OliveTest;Trusted_Connection=yes;" />
+  </connectionStrings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
   </system.web>
