--- a/Olive/Website/Website.csproj
+++ b/Olive/Website/Website.csproj
@@ -95,9 +95,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ISiteSession.cs" />
+    <Compile Include="Helpers\ISiteSession.cs" />
     <Compile Include="Controllers\SiteController.cs" />
-    <Compile Include="Controllers\SiteSession.cs" />
+    <Compile Include="Helpers\SiteSession.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -174,6 +174,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{D3889083-4413-4DCE-B732-1A9EB46AFC8A}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj">
       <Project>{AC234983-EDA6-4AEF-B86F-74DD061A5AA8}</Project>
       <Name>DataAccess</Name>
