--- a/Olive/Website/Web.config
+++ b/Olive/Website/Web.config
@@ -5,10 +5,14 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="OliveConnectionString" connectionString="server=.\SQLEXPRESS;user=ServiceUser;password=temp;database=OliveTest;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
-    <add key="ClientValidationEnabled" value="true"/>
-    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="ClientValidationEnabled" value="false"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
     
   <system.web>
@@ -21,10 +25,6 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
-    </authentication>
 
     <pages>
       <namespaces>
