--- a/Olive/Website/packages.config
+++ b/Olive/Website/packages.config
@@ -6,4 +6,8 @@
   <package id="jQuery.UI.Combined" version="1.8.11" />
   <package id="EntityFramework" version="4.1.10331.0" />
   <package id="Modernizr" version="1.7" />
+  <package id="WebActivator" version="1.4.1" />
+  <package id="PrecompiledMvcViewEngine" version="1.0" />
+  <package id="HtmlAgilityPack" version="1.4.0" />
+  <package id="PrecompiledMvcViews.Testing" version="1.0" />
 </packages>
