--- a/Olive/DataAccess/DataAccess.csproj
+++ b/Olive/DataAccess/DataAccess.csproj
@@ -112,22 +112,24 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="Account.cs" />
+    <Compile Include="Domain\Account.cs" />
     <Compile Include="AccountType.cs" />
-    <Compile Include="AccountUser.cs" />
+    <Compile Include="Domain\AccountUser.cs" />
     <Compile Include="AccountWithBalance.cs" />
     <Compile Include="AuthenticationException.cs" />
     <Compile Include="DbConnectionExtensions.cs" />
-    <Compile Include="Currency.cs" />
+    <Compile Include="Domain\Currency.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IOliveContext.cs" />
+    <Compile Include="IOliveContextContract.cs" />
     <Compile Include="OliveContext.cs" />
+    <Compile Include="OliveContext.StoredProcedures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Session.cs" />
+    <Compile Include="Domain\Session.cs" />
     <Compile Include="SessionDoesNotExistException.cs" />
-    <Compile Include="Transfer.cs" />
+    <Compile Include="Domain\Transfer.cs" />
     <Compile Include="UnknownReturnCodeException.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="Domain\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\Olive.snk" />
