--- a/Olive/Services.Tests/Services.Tests.csproj
+++ b/Olive/Services.Tests/Services.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
