--- a/Olive/Core/Core.csproj
+++ b/Olive/Core/Core.csproj
@@ -111,6 +111,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Crypto.cs" />
+    <Compile Include="ICrypto.cs" />
     <Compile Include="MockDataParameterCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestHelper.cs" />
