--- a/Olive/Services/Services.csproj
+++ b/Olive/Services/Services.csproj
@@ -108,9 +108,10 @@
     </Compile>
     <Compile Include="AccountOverview.svc.cs" />
     <Compile Include="AccountOverviewAccount.svc.cs" />
-    <Compile Include="AuthenticationFault.cs" />
+    <Compile Include="FaultFactory.cs" />
     <Compile Include="GetAccountAccount.cs" />
     <Compile Include="GetAccountTransfersTransfer.cs" />
+    <Compile Include="IFaultFactory.cs" />
     <Compile Include="IWebService.cs" />
     <Compile Include="IWebServiceContract.cs" />
     <Compile Include="Olive.svc.cs">
