--- a/Olive/Website/Web.config
+++ b/Olive/Website/Web.config
@@ -43,11 +43,11 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
 
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Auto">
       <remove statusCode="404"/>
       <remove statusCode="500"/>
       <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL" />
-      <error statusCode="500" path="/Error/ServerError" responseMode="ExecuteURL" />
+      <error statusCode="500" path="/Error/Error" responseMode="ExecuteURL" />
     </httpErrors>
   </system.webServer>
 
